--- a/views/results.ejs
+++ b/views/results.ejs
@@ -43,10 +43,8 @@
         color: #f8ede3;
       }
       footer{
-        position: absolute;
+        text-align: center;
         color: white;
-        bottom:1%;
-        left: 45%;
       }
     </style>
   </head>
