--- a/views/results.ejs
+++ b/views/results.ejs
@@ -42,14 +42,10 @@
       th{
         color: #f8ede3;
       }
-      footer{
-        text-align: center;
-        color: white;
-      }
     </style>
   </head>
   <body>
-    <div class="container mt-5 mb-5">
+    <div class="container mt-5 p-5">
       <h3>Result of the search :</h3>
       <section class="d-flex justify-content-center align-content-center">
         <table class="table table-hower table-bordered p-5 m-5" style="width: 80%; background-color: #798777;">
@@ -100,6 +96,5 @@
       </section>
       <center><h3>Want to perform another search? &nbsp;&nbsp;<a class="btn btn-light" href="/">Home</a> </h3></center>
     </div>
-    <footer>Created by Ratan Dheeraj</footer>
   </body>
 </html>
